--- a/procedure/code/01-R-markdown.Rmd
+++ b/procedure/code/01-R-markdown.Rmd
@@ -32,18 +32,21 @@ We independently accessed the World Database on Protected Areas <https://www.pro
 - `Date created`: November 8, 2023
 - `Date modified`: date of most recent revision
 - `Spatial Coverage`: Southeast Asia
-- `Spatial Resolution`: Species observations - GPS located point data, GEDI-derived forest structural covariates - 1km raster, HDI - country-level, Protected Areas - PA Polygons 
+- `Spatial Resolution`: Species observations - GPS located point data, GEDI-derived forest structural covariates - 1 km raster, HDI - country-level, Protected Areas - PA Polygons 
 - `Spatial Reference System`: Specify the geographic or projected coordinate system for the study, e.g. EPSG:4326
 - `Temporal Coverage`: 01-2015 to 08-2021
 - `Temporal Resolution`: Specify the temporal resolution of your study---i.e. the duration of time for which each observation represents or the revisit period for repeated observations
 
 # Study design
+This study consists of a reproduction of the original work by Brodie et al. (2023) and a replication to analyze how connectivity influences protected area efficacy in preserving tropical biodiversity. We first implement the workflow as described and shared in Brodie et al. (2023) as identically as possible to reproduce the original study. We then compute and add connectivity measures at the sample points to the original dataset to further examine the effect of connectivity.
 
-Describe how the study relates to prior literature, e.g. is it a **original study**, **meta-analysis study**, **reproduction study**, **reanalysis study**, or **replication study**?
+We ask the research question of whether protected areas moderate the efficacy of protection on tropical biodiversity. Our hypothesis is as follows:
+
+> H0: Connectivity mdoerates the efficacy of protection on biodiversity.
+
+We build upon the existing structural causal models by Brodie et al. (2023) to test the hypothesis.
 
 Also describe the original study archetype, e.g. is it **observational**, **experimental**, **quasi-experimental**, or **exploratory**?
-
-Enumerate specific **hypotheses** to be tested or **research questions** to be investigated here, and specify the type of method, statistical test or model to be used on the hypothesis or question.
 
 # Materials and procedure
 
