--- a/procedure/code/01-R-markdown.Rmd
+++ b/procedure/code/01-R-markdown.Rmd
@@ -18,7 +18,7 @@ This study is a *replication* of:
 
 > Brodie, J.F., Mohd-Azlan, J., Chen, C. et al. Landscape-scale benefits of protected areas for tropical biodiversity. Nature 620, 807–812 (2023). <https://doi.org/10.1038/s41586-023-06410-z>
 
-We replicate the analysis of Brodie et al. and introduce protected area (PA) connectivity as a statistical moderator of the effect PA status has on biodiversity.
+We replicate the analysis of Brodie et al. (2023) and introduce protected area (PA) connectivity as a statistical moderator of the effect PA status has on biodiversity.
 We find KEY FINDINGS.
 Using a causal framework that controls for X through matching, Brodie et al. (2023) find evidence that protected areas (PA) do preserve vertebrate biodiversity within their boundaries and in the adjacent unprotected landscape. 
 Brodie et al. provides evidence of the efficacy of protected area status, they do not assess whether the effect they observe is altered by network connectivity.
@@ -40,28 +40,37 @@ We independently accessed the World Database on Protected Areas <https://www.pro
 # Study design
 This study consists of a reproduction of the original work by Brodie et al. (2023) and a replication to analyze how connectivity influences protected area efficacy in preserving tropical biodiversity. We first implement the workflow as described and shared in Brodie et al. (2023) as identically as possible to reproduce the original study. We then compute and add connectivity measures at the sample points to the original dataset to further examine the effect of connectivity.
 
-The hypotheses by Brodie et al. (2023) and how they tested them:
+Brodie et al. (2023) formulated hypotheses to assess protected area effectiveness and tested them with structural causal modeling. Hypotheses concerned overall protected area effectiveness (H1) and PAs' size (H2) and closeness (H3) effects on biodiversity in unprotected lands to infer implications for spillover and leakage effects. 
 
-> H0: Protected areas are effective for conserving tropical mammal and bird diversity after de-confounding the effects of site accessibility and habitat condition.
+### Protected area effectiveness on overall biodiversity
 
-They built a causal model to assess the effect of PA on tropical bird and mammal diversity and removed confounding effects of site accessibility and habitat quality along with other factors using matching based on propensity scores. Biodiversity metrics used include species richness (SR), functional richness (FR), and phylogenetic diversity (PD). Site accessibility was proxied using Human Development Index (HDI), circuit theory-based measures of proximity to human development^["circuit theoretical models parameterized with human travel speeds across different terrains and the locations of populations centers and transportation networks" (Brodie et al. 2023)], and an interaction term of the two variables. Habitat quality was proxied using three-dimensional habitat structure metrics derived from the Global Ecosystem Dynamics Investigation (GEDI) mission. 
+> H1: Biodiversity is higher within protected areas than outside (after removing effects of site accessbility and habitat condition).
+
+Debates exist on whether protected areas are effective because of their remote location and good habitat conditions or conservation status itself. Motivated by such, Brodie et al. (2023) estimated protected areas efficacy for conserving tropical mammal and bird diversity after de-confounding the effects of site accessibility and habitat condition (H1). Their outcome variables are various aspects of biodiversity. The treatment variable is whether the observation point is within or outside a reserve. If the treatment variable is significant in a causal model, it supports H1 and adds evidence for the effectiveness of protecting lands.
+
+To do so, they removed confounding effects and built causal models for birds vs mammals, and different biodiversity outcome metrics. Two major confounders identified were site accessibility and habitat quality. Site accessibility was proxied using Human Development Index (HDI), circuit theory-based measures of proximity to human development^["circuit theoretical models parameterized with human travel speeds across different terrains and the locations of populations centers and transportation networks" (Brodie et al. 2023)], and an interaction term of the two variables. Habitat quality was proxied using three-dimensional habitat structure metrics derived from the Global Ecosystem Dynamics Investigation (GEDI) mission. Confounding effects were removed using statistical matching based on propensity scores. Biodiversity metrics used as outcome variables include species richness (SR), functional richness (FR), and phylogenetic diversity (PD). PA effects were estimated using separate mixed effects linear regression for different biodiversity metrics and for birds vs mammals.
  
-> H1: Biodiversity is higher within protected areas than outside.
+Brodie et al. (2023) found protection status increased all facets of bird biodiversity but the effects were not significant for mammals.
 
-They tested H1 with causal models where the outcome variables are different facets of biodiversity and the treatment variable is within or outside protected areas.
 
-> H2: Biodiversity outside protected areas is higher when they are near large ones. 
+### Spillover and leakage effects on unprotected lands
 
-They tested H2 using observations outside PAs using causal models where the outcome variables are biodiversity metrics and the treatment variable is whether the observation is near large or small PAs. PAs smaller than 500 km2 are categorized as small PAs, the rest as large PAs. 
+Spillover and leakage effects are two ways protected areas could have regional impacts on biodiversity beyond their boundaries. Spillover effect refers to enhanced biodiversity in unprotected lands near PAs whereas leakage effect refers to increased conservation pressure (e.g., unregulated hunting and displaced disturbances) in nearby unprotected lands because of PA establishment. Brodie et al. (2023) tested the effects of PA sizes (H2) and closeness (i.e., distance, H3) to neighboring unprotected lands.
 
-> H3: Spillover & Leakage effect
+> H2: Biodiversity outside protected areas is higher when they are near large ones (size effect). 
+
+They built separate models for birds and mammals on three different diversity metrics and tested H2 using observations outside protected areas. The treatment variable was a binary variable indicating whether the observation point was close to a large (i.e., ≥ 500 km^2) reserve or small (i.e., < 500 km^2). They went through the same matching steps.
+
+Brodie et al. (2023) found that 
+
+> H3: Biodiversity outside protected areas is higher when they are closer (distance effect).
 
 They "assessed diversity outside PAs as a function of Euclidean distance to the nearest reserve" and did not find a significant correlation.
 Where did they test leakage effect?
 
 We ask the research question of whether protected areas moderate the efficacy of protection on tropical biodiversity. Our hypothesis is as follows:
 
-> H0: Connectivity mdoerates the efficacy of protection on biodiversity.
+> H4: Connectivity mdoerates the efficacy of protection on biodiversity.
 
 We build upon the existing structural causal models by Brodie et al. (2023) to test the hypothesis. The original study archetype is quasi-experimental as it uses a matching strategy to perform causal analysis.
 
