--- a/software.bib
+++ b/software.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2023},
+  year = {2022},
   url = {https://www.R-project.org/},
 }
 
@@ -12,7 +12,7 @@
   author = {Kirill Müller},
   year = {2020},
   note = {R package version 1.0.1},
-  url = {https://CRAN.R-project.org/package=here},
+  url = {https://here.r-lib.org/},
 }
 
 @Manual{R-tidyverse,
@@ -20,7 +20,7 @@
   author = {Hadley Wickham},
   year = {2023},
   note = {R package version 2.0.0},
-  url = {https://CRAN.R-project.org/package=tidyverse},
+  url = {https://tidyverse.tidyverse.org},
 }
 
 @Article{tidyverse2019,
